--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma-seed": "tsx prisma/seeds.ts"
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.0",
@@ -17,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "sqlite3": "^5.1.7",
+    "tsx": "^4.7.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
